small change to color edges

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1920,9 +1920,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Glattbach...\n",
+      "Processing Mömlingen...\n",
+      "Processing Ringheim...\n",
+      "Processing Aschaffenburg...\n",
+      "Processing Großostheim...\n",
+      "Processing Marktheidenfeld...\n"
+     ]
+    }
+   ],
    "source": [
     "def create_graph_for_centrality(df):\n",
     "    G = nx.Graph()\n",
@@ -1946,7 +1959,7 @@
     "    return G  \n",
     "\n",
     "def calculate_centrality_indices(G):\n",
-    "    degree_centrality = {node: centrality for node, centrality in nx.degree_centrality(G).items() if G.degree[node] < 7}\n",
+    "    degree_centrality = nx.degree_centrality(G)\n",
     "    closeness_centrality = nx.closeness_centrality(G)\n",
     "    betweenness_centrality = nx.betweenness_centrality(G)\n",
     "\n",
@@ -2020,9 +2033,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Glattbach...\n",
+      "Processing Mömlingen...\n",
+      "Processing Ringheim...\n",
+      "Processing Aschaffenburg...\n",
+      "Processing Großostheim...\n",
+      "Processing Marktheidenfeld...\n"
+     ]
+    }
+   ],
    "source": [
     "# Berechnung der Netzwerkmetriken\n",
     "def calculate_average_shortest_path_length(G):\n",
@@ -2045,13 +2071,13 @@
     "    plt.subplot(1, 2, 1)\n",
     "    plt.title(f\"Original {title}\")\n",
     "    nx.draw(G_original, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "            node_color=list(centrality_original.values()), alpha=0.8, with_labels=False)\n",
+    "            node_color=list(centrality_original.values()), alpha=0.8, with_labels=False, edge_color='grey')\n",
     "    plt.axis('off')\n",
     "    \n",
     "    plt.subplot(1, 2, 2)\n",
     "    plt.title(f\"After Removal {title}\")\n",
     "    nx.draw(G_removed, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "            node_color=list(centrality_removed.values()), alpha=0.8, with_labels=False)\n",
+    "            node_color=list(centrality_removed.values()), alpha=0.8, with_labels=False, edge_color='grey')\n",
     "    plt.axis('off')\n",
     "\n",
     "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}_comparison.png\"))\n",
@@ -2120,42 +2146,6 @@
     "                             'Number of Components', output_base_folder, \"Number_of_components\")\n",
     "visualize_comparison_metrics(city_names, original_asp_lengths, new_asp_lengths, \n",
     "                             'ASP Lengths', output_base_folder, \"ASP_lengths\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.bar(x, original_component_counts, width=0.4, label='Original Component Count', align='center')\n",
-    "plt.bar(x, new_component_counts, width=0.4, label='New Component Count', align='edge')\n",
-    "plt.xticks(x, city_names, rotation=45)\n",
-    "plt.ylabel('Number of Components')\n",
-    "plt.title('Comparison of Number of Components')\n",
-    "plt.legend()\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(output_base_folder, \"Number_of_components_ccd.png\"))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.bar(x, original_asp_lengths, width=0.4, label='Original ASP Lengths', align='center')\n",
-    "plt.bar(x, new_component_counts, width=0.4, label='New ASP Lengths', align='edge')\n",
-    "plt.xticks(x, city_names, rotation=45)\n",
-    "plt.ylabel('ASP Lengths')\n",
-    "plt.title('Comparison of Average Shortest Path Lengths')\n",
-    "plt.legend()\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(output_base_folder, \"ASP_lengths_ccd.png\"))\n",
-    "plt.show()"
    ]
   }
  ],
