--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1989,6 +1989,9 @@
     "def get_top_betweennes_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
+    "def get_top_closeness_centrality_nodes(centrality, top_n):\n",
+    "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
+    "\n",
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
     "\n",
@@ -2014,9 +2017,13 @@
     "        G = create_graph_for_centrality(df)\n",
     "        centrality_indices = calculate_centrality_indices(G)\n",
     "\n",
-    "        top_nodes = get_top_betweennes_centrality_nodes(centrality_indices['Betweenness_centrality'], top_n=top_n)\n",
-    "        for node_id, centrality_value in top_nodes:\n",
+    "        top_nodes_between = get_top_betweennes_centrality_nodes(centrality_indices['Betweenness_centrality'], top_n=top_n)\n",
+    "        top_nodes_close = get_top_closeness_centrality_nodes(centrality_indices['Closeness_centrality'], top_n=top_n)\n",
+    "        for node_id, centrality_value in top_nodes_between:\n",
     "            collected_data.append({'city': city_name, 'node_id': node_id, 'Betweenness_centrality': centrality_value})\n",
+    "\n",
+    "        for node_id, centrality_value in top_nodes_close:\n",
+    "            collected_data.append({'city': city_name, 'node_id': node_id, 'Closeness_centrality': centrality_value})\n",
     "\n",
     "        for centrality_name, centrality_values in centrality_indices.items():\n",
     "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)\n",
@@ -2028,12 +2035,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vergleich vor und nach Löschen der Top-Knoten"
+    "### Vergleich vor und nach Löschen der Top-Knoten (Betweenness und Closeness)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2095,7 +2102,8 @@
     "    plt.tight_layout()\n",
     "    plt.savefig(os.path.join(output_folder, f\"{filename}.png\"))\n",
     "    plt.close()\n",
-    "    \n",
+    "\n",
+    "# Hauptlogik\n",
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
     "\n",
@@ -2104,6 +2112,12 @@
     "new_component_counts = []\n",
     "original_asp_lengths = []\n",
     "new_asp_lengths = []\n",
+    "\n",
+    "top_n_map = {\n",
+    "    'village': 10,\n",
+    "    'town': 20,\n",
+    "    'city': 30\n",
+    "}\n",
     "\n",
     "for subfolder in ['village', 'town']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
@@ -2121,7 +2135,10 @@
     "        original_component_count = calculate_number_of_components(G)\n",
     "        original_asp_length = calculate_average_shortest_path_length(G)\n",
     "\n",
-    "        nodes_to_remove = top_nodes_df[top_nodes_df['city'] == city_name]['node_id'].tolist()\n",
+    "        # Top-K Knoten der Betweenness-Zentralität\n",
+    "        top_nodes_between = get_top_betweennes_centrality_nodes(centrality_indices_original['Betweenness_centrality'], top_n=top_n_map[subfolder])\n",
+    "        nodes_to_remove = [node_id for node_id, _ in top_nodes_between]\n",
+    "\n",
     "        G_removed = remove_nodes(G, nodes_to_remove)\n",
     "        centrality_indices_removed = calculate_centrality_indices(G_removed)\n",
     "\n",
@@ -2134,6 +2151,7 @@
     "        original_asp_lengths.append(original_asp_length)\n",
     "        new_asp_lengths.append(new_asp_length)\n",
     "\n",
+    "        # Visualisierung der zentralen Knoten\n",
     "        visualize_centrality_comparison(\n",
     "            G, G_removed,\n",
     "            centrality_indices_original['Betweenness_centrality'],\n",
@@ -2142,10 +2160,93 @@
     "            output_folder\n",
     "        )\n",
     "\n",
+    "# Vergleichsmetriken visualisieren\n",
     "visualize_comparison_metrics(city_names, original_component_counts, new_component_counts, \n",
-    "                             'Number of Components', output_base_folder, \"Number_of_components\")\n",
+    "                             'Number of Components', output_base_folder, \"Number_of_components_Betweenness\")\n",
     "visualize_comparison_metrics(city_names, original_asp_lengths, new_asp_lengths, \n",
-    "                             'ASP Lengths', output_base_folder, \"ASP_lengths\")\n"
+    "                             'ASP Lengths', output_base_folder, \"ASP_lengths_Betweenness\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Glattbach...\n",
+      "Processing Mömlingen...\n",
+      "Processing Ringheim...\n",
+      "Processing Aschaffenburg...\n",
+      "Processing Großostheim...\n",
+      "Processing Marktheidenfeld...\n"
+     ]
+    }
+   ],
+   "source": [
+    "city_folder = \"City_data\"\n",
+    "output_base_folder = \"Node centrality\"\n",
+    "\n",
+    "city_names = []\n",
+    "original_component_counts = []\n",
+    "new_component_counts = []\n",
+    "original_asp_lengths = []\n",
+    "new_asp_lengths = []\n",
+    "\n",
+    "top_n_map = {\n",
+    "    'village': 10,\n",
+    "    'town': 20,\n",
+    "    'city': 30\n",
+    "}\n",
+    "\n",
+    "for subfolder in ['village', 'town']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
+    "    for file_path in files:\n",
+    "        city_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "        output_folder = os.path.join(output_base_folder, city_name)\n",
+    "        os.makedirs(output_folder, exist_ok=True)\n",
+    "        print(f\"Processing {city_name}...\")    \n",
+    "        df = load_from_all_xml(file_path)\n",
+    "\n",
+    "        G = create_graph_for_centrality(df)\n",
+    "        centrality_indices_original = calculate_centrality_indices(G)\n",
+    "\n",
+    "        original_component_count = calculate_number_of_components(G)\n",
+    "        original_asp_length = calculate_average_shortest_path_length(G)\n",
+    "\n",
+    "        # Top-K Knoten der Closeness-Zentralität\n",
+    "        top_nodes_between = get_top_closeness_centrality_nodes(centrality_indices_original['Closeness_centrality'], top_n=top_n_map[subfolder])\n",
+    "        nodes_to_remove = [node_id for node_id, _ in top_nodes_between]\n",
+    "\n",
+    "        G_removed = remove_nodes(G, nodes_to_remove)\n",
+    "        centrality_indices_removed = calculate_centrality_indices(G_removed)\n",
+    "\n",
+    "        new_component_count = calculate_number_of_components(G_removed)\n",
+    "        new_asp_length = calculate_average_shortest_path_length(G_removed)\n",
+    "\n",
+    "        city_names.append(city_name)\n",
+    "        original_component_counts.append(original_component_count)\n",
+    "        new_component_counts.append(new_component_count)\n",
+    "        original_asp_lengths.append(original_asp_length)\n",
+    "        new_asp_lengths.append(new_asp_length)\n",
+    "\n",
+    "        # Visualisierung der zentralen Knoten\n",
+    "        visualize_centrality_comparison(\n",
+    "            G, G_removed,\n",
+    "            centrality_indices_original['Closeness_centrality'],\n",
+    "            centrality_indices_removed['Closeness_centrality'],\n",
+    "            'Closeness Centrality',\n",
+    "            output_folder\n",
+    "        )\n",
+    "\n",
+    "# Vergleichsmetriken visualisieren\n",
+    "visualize_comparison_metrics(city_names, original_component_counts, new_component_counts, \n",
+    "                             'Number of Components', output_base_folder, \"Number_of_components_Closeness\")\n",
+    "visualize_comparison_metrics(city_names, original_asp_lengths, new_asp_lengths, \n",
+    "                             'ASP Lengths', output_base_folder, \"ASP_lengths_Closeness\")\n"
    ]
   }
  ],
