Closeness centrality comparison

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,6 @@
     "from collections import Counter, defaultdict\n",
     "from math import radians, cos, sin, asin, sqrt\n",
     "import xml.etree.ElementTree as ET\n",
-    "import math\n",
     "from matplotlib.lines import Line2D\n",
     "from scipy.spatial.distance import pdist, squareform\n",
     "\n",
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,30 +1911,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Darstellung der Zentralitäten pro Stadt"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Glattbach...\n",
-      "Processing Mömlingen...\n",
-      "Processing Ringheim...\n",
-      "Processing Aschaffenburg...\n",
-      "Processing Großostheim...\n",
-      "Processing Marktheidenfeld...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_graph_for_centrality(df):\n",
     "    G = nx.Graph()\n",
@@ -1992,6 +1971,65 @@
     "def get_top_closeness_centrality_nodes(centrality, top_n):\n",
     "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
     "\n",
+    "def calculate_average_shortest_path_length(G):\n",
+    "    if not nx.is_connected(G):\n",
+    "        G = G.subgraph(max(nx.connected_components(G), key=len)).copy()\n",
+    "    return nx.average_shortest_path_length(G)\n",
+    "\n",
+    "def calculate_number_of_components(G):\n",
+    "    return nx.number_connected_components(G)\n",
+    "\n",
+    "def remove_nodes(G, nodes_to_remove):\n",
+    "    G_removed = G.copy()\n",
+    "    G_removed.remove_nodes_from(nodes_to_remove)\n",
+    "    return G_removed\n",
+    "\n",
+    "def visualize_centrality_comparison(G_original, G_removed, centrality_original, centrality_removed, title, output_folder):\n",
+    "    pos = nx.get_node_attributes(G_original, 'pos')\n",
+    "    plt.figure(figsize=(15, 7))\n",
+    "\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title(f\"Original {title}\")\n",
+    "    nx.draw(G_original, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "            node_color=list(centrality_original.values()), alpha=0.8, with_labels=False, edge_color='grey')\n",
+    "    plt.axis('off')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.title(f\"After Removal {title}\")\n",
+    "    nx.draw(G_removed, pos, node_size=10, cmap=plt.cm.plasma,\n",
+    "            node_color=list(centrality_removed.values()), alpha=0.8, with_labels=False, edge_color='grey')\n",
+    "    plt.axis('off')\n",
+    "\n",
+    "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}_comparison.png\"))\n",
+    "    plt.close()\n",
+    "\n",
+    "def visualize_comparison_metrics(city_names, original_counts, new_counts, metric_name, output_folder, filename):\n",
+    "    x = range(len(city_names))\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.bar(x, original_counts, width=0.4, label=f'Original {metric_name}', align='center')\n",
+    "    plt.bar(x, new_counts, width=0.4, label=f'New {metric_name}', align='edge')\n",
+    "    plt.xticks(x, city_names, rotation=45)\n",
+    "    plt.ylabel(metric_name)\n",
+    "    plt.title(f'Comparison of {metric_name}')\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(output_folder, f\"{filename}.png\"))\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Darstellung der Zentralitäten pro Stadt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
     "\n",
@@ -2040,69 +2078,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Glattbach...\n",
-      "Processing Mömlingen...\n",
-      "Processing Ringheim...\n",
-      "Processing Aschaffenburg...\n",
-      "Processing Großostheim...\n",
-      "Processing Marktheidenfeld...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Berechnung der Netzwerkmetriken\n",
-    "def calculate_average_shortest_path_length(G):\n",
-    "    if not nx.is_connected(G):\n",
-    "        G = G.subgraph(max(nx.connected_components(G), key=len)).copy()\n",
-    "    return nx.average_shortest_path_length(G)\n",
-    "\n",
-    "def calculate_number_of_components(G):\n",
-    "    return nx.number_connected_components(G)\n",
-    "\n",
-    "def remove_nodes(G, nodes_to_remove):\n",
-    "    G_removed = G.copy()\n",
-    "    G_removed.remove_nodes_from(nodes_to_remove)\n",
-    "    return G_removed\n",
-    "\n",
-    "def visualize_centrality_comparison(G_original, G_removed, centrality_original, centrality_removed, title, output_folder):\n",
-    "    pos = nx.get_node_attributes(G_original, 'pos')\n",
-    "    plt.figure(figsize=(15, 7))\n",
-    "\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.title(f\"Original {title}\")\n",
-    "    nx.draw(G_original, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "            node_color=list(centrality_original.values()), alpha=0.8, with_labels=False, edge_color='grey')\n",
-    "    plt.axis('off')\n",
-    "    \n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.title(f\"After Removal {title}\")\n",
-    "    nx.draw(G_removed, pos, node_size=10, cmap=plt.cm.plasma,\n",
-    "            node_color=list(centrality_removed.values()), alpha=0.8, with_labels=False, edge_color='grey')\n",
-    "    plt.axis('off')\n",
-    "\n",
-    "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}_comparison.png\"))\n",
-    "    plt.close()\n",
-    "\n",
-    "def visualize_comparison_metrics(city_names, original_counts, new_counts, metric_name, output_folder, filename):\n",
-    "    x = range(len(city_names))\n",
-    "    plt.figure(figsize=(10, 5))\n",
-    "    plt.bar(x, original_counts, width=0.4, label=f'Original {metric_name}', align='center')\n",
-    "    plt.bar(x, new_counts, width=0.4, label=f'New {metric_name}', align='edge')\n",
-    "    plt.xticks(x, city_names, rotation=45)\n",
-    "    plt.ylabel(metric_name)\n",
-    "    plt.title(f'Comparison of {metric_name}')\n",
-    "    plt.legend()\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(output_folder, f\"{filename}.png\"))\n",
-    "    plt.close()\n",
-    "\n",
     "# Hauptlogik\n",
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
@@ -2119,7 +2098,7 @@
     "    'city': 30\n",
     "}\n",
     "\n",
-    "for subfolder in ['village', 'town']:\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "    for file_path in files:\n",
@@ -2169,22 +2148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Glattbach...\n",
-      "Processing Mömlingen...\n",
-      "Processing Ringheim...\n",
-      "Processing Aschaffenburg...\n",
-      "Processing Großostheim...\n",
-      "Processing Marktheidenfeld...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
@@ -2201,7 +2167,7 @@
     "    'city': 30\n",
     "}\n",
     "\n",
-    "for subfolder in ['village', 'town']:\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "    for file_path in files:\n",
