Evaluation without track

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,6 +1350,10 @@
     "                df = load_from_all_xml(file_path)\n",
     "\n",
     "                highway_df = df[(df['type'] == 'way') & (df['tagkey'] == 'highway') & (df['length'].notna())]\n",
+    "                \n",
+    "                # Without track\n",
+    "                #highway_df = highway_df[highway_df['tagvalue'] != 'track']\n",
+    "\n",
     "                length_sums = highway_df.groupby('tagvalue')['length'].sum()\n",
     "\n",
     "                for highway_type, total_length in length_sums.items():\n",
@@ -1398,6 +1402,9 @@
     "            df = load_from_all_xml(file_path)\n",
     "\n",
     "            highway_df = df[(df['type'] == 'way') & (df['tagkey'] == 'highway')]\n",
+    "\n",
+    "            # Without track\n",
+    "            #highway_df = highway_df[highway_df['tagvalue'] != 'track']\n",
     "\n",
     "            total_length = highway_df['length'].sum()\n",
     "            \n",
@@ -1493,6 +1500,9 @@
     "            df = load_from_all_xml(file_path)\n",
     "\n",
     "            highway_df = df[(df['type'] == 'way') & (df['tagkey'] == 'highway')]\n",
+    "            \n",
+    "            # Without track\n",
+    "            #highway_df = highway_df[highway_df['tagvalue'] != 'track']\n",
     "\n",
     "            total_length = highway_df['length'].sum()\n",
     "            \n",
