--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -27,7 +27,7 @@
     "from math import radians, cos, sin, asin, sqrt\n",
     "import xml.etree.ElementTree as ET\n",
     "from matplotlib.lines import Line2D\n",
-    "from scipy.spatial.distance import pdist, squareform\n",
+    "import random\n",
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
@@ -1626,7 +1626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Verkehrseffizienz"
+    "### Dijkstra"
    ]
   },
   {
@@ -1635,96 +1635,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEFAULT_SPEEDS = {\n",
-    "    'primary': 130,\n",
-    "    'secondary': 100,\n",
-    "    'tertiary': 50,\n",
-    "    'other': 30\n",
-    "}\n",
-    "\n",
-    "def assign_default_speed(ways_df):\n",
-    "    ways_df['maxspeed'] = DEFAULT_SPEEDS['other']\n",
+    "def create_graph(df, city):\n",
+    "    G = nx.Graph()\n",
     "    \n",
-    "    for highway_type, speed in DEFAULT_SPEEDS.items():\n",
-    "        if highway_type != 'other':\n",
-    "            ways_df.loc[ways_df['tagvalue'] == highway_type, 'maxspeed'] = speed\n",
+    "    for index, row in df[df['type'] == 'node'].iterrows():  \n",
+    "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
-    "    return ways_df    \n",
-    "\n",
-    "def update_speeds(ways_speed_updated, ways_maxspeed):\n",
-    "    merged_df = pd.merge(ways_speed_updated, ways_maxspeed[['id', 'tagvalue']], on='id', how='left', suffixes=('_speed', '_maxspeed'))\n",
-    "    merged_df['maxspeed'] = merged_df['tagvalue_maxspeed'].fillna(merged_df['maxspeed'])\n",
-    "    merged_df.rename(columns={'tagvalue_speed': 'tagvalue'}, inplace=True)\n",
-    "    merged_df.drop(columns=['tagvalue_maxspeed'], inplace=True)\n",
-    "\n",
-    "    return merged_df\n",
-    "\n",
-    "def calculate_efficiency(ways_df):\n",
-    "    ways_df['length_km'] = ways_df['length'] / 1000 \n",
-    "    ways_df['maxspeed'] = pd.to_numeric(ways_df['maxspeed'], errors='coerce')\n",
+    "    for index, way in df[df['type'] == 'way'].iterrows():\n",
+    "        node_ids_list = way['node_ids']\n",
+    "        if node_ids_list is not None:\n",
+    "            filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
+    "            if len(filtered_node_ids_list) > 1:\n",
+    "                for i in range(len(filtered_node_ids_list) - 1):\n",
+    "                    highway_type = way['tagvalue']\n",
+    "                    G.add_edge(filtered_node_ids_list[i], filtered_node_ids_list[i + 1], highway_type=highway_type)\n",
     "    \n",
-    "    ways_df = ways_df[ways_df['length'] >= 20]\n",
+    "    return G\n",
+    "\n",
+    "def select_random_node_pairs(df_nodes, num_pairs=10, min_distance=1000):\n",
+    "    random_pairs = []\n",
+    "\n",
+    "    for _ in range(num_pairs):\n",
+    "        start_node = random.choice(df_nodes['id'].values)\n",
+    "        end_node = random.choice(df_nodes['id'].values)\n",
+    "\n",
+    "        while start_node == end_node or haversine(\n",
+    "            df_nodes[df_nodes['id'] == start_node]['longitude'].values[0], \n",
+    "            df_nodes[df_nodes['id'] == start_node]['latitude'].values[0],\n",
+    "            df_nodes[df_nodes['id'] == end_node]['longitude'].values[0],\n",
+    "            df_nodes[df_nodes['id'] == end_node]['latitude'].values[0]\n",
+    "        ) < min_distance:\n",
+    "            start_node = random.choice(df_nodes['id'].values)\n",
+    "            end_node = random.choice(df_nodes['id'].values)\n",
+    "\n",
+    "        random_pairs.append((start_node, end_node))\n",
+    "\n",
+    "    return random_pairs\n",
+    "\n",
+    "def run_dijkstra_and_track_types(G, start_node, end_node):\n",
+    "    try:\n",
+    "        shortest_path = nx.dijkstra_path(G, source=start_node, target=end_node, weight='weight')\n",
+    "    except nx.NetworkXNoPath:\n",
+    "        print(f\"No path found between {start_node} and {end_node}, selecting new nodes.\")\n",
+    "        return None\n",
     "    \n",
-    "    ways_df['travel_time'] = ways_df['length_km'] / ways_df['maxspeed']\n",
-    "    ways_df = ways_df[ways_df['travel_time'] > 0]\n",
-    "    ways_df['efficiency'] = 1 / ways_df['travel_time']\n",
-    "    \n",
-    "    return ways_df\n",
+    "    types_traversed = []\n",
+    "    for i in range(len(shortest_path) - 1):\n",
+    "        node1 = shortest_path[i]\n",
+    "        node2 = shortest_path[i + 1]\n",
+    "        edge_data = G.get_edge_data(node1, node2)\n",
+    "        highway_type = edge_data['highway_type']\n",
+    "        types_traversed.append(highway_type)\n",
     "\n",
-    "def filter_top_highways(ways_df, percentage_lengths_df, city_name):\n",
-    "    top_highways = percentage_lengths_df[percentage_lengths_df['city'] == city_name].nlargest(7, 'percentage')['highway_type'].values\n",
-    "    filtered_ways = ways_df[ways_df['tagvalue'].isin(top_highways)]\n",
-    "    return filtered_ways\n",
+    "    return types_traversed\n",
     "\n",
-    "def get_median_efficiency(ways_with_efficiency):\n",
-    "    avg_travel_time = ways_with_efficiency['travel_time'].mean()\n",
+    "def plot_traffic_efficiency(results_df, output_folder, analysis_number):\n",
+    "    dijkstra_folder = os.path.join(output_folder, 'Dijkstra')\n",
+    "    os.makedirs(dijkstra_folder, exist_ok=True)\n",
     "\n",
-    "    total_length = ways_with_efficiency['length_km'].sum()\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.barplot(x='highway_type', y='count', hue='city', data=results_df, palette='muted')\n",
+    "    plt.title(f'Verkehrseffizienz: Häufigkeit der durchfahrenen Straßentypen (Analyse {analysis_number})')\n",
+    "    plt.xlabel('Straßentyp')\n",
+    "    plt.ylabel('Durchfahrten (Anzahl)')\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(dijkstra_folder, f\"Dijkstra_Analysis_{analysis_number}.png\"))\n",
+    "    plt.close()\n",
     "\n",
-    "    ways_with_efficiency['percentage'] = (ways_with_efficiency['length_km'] / total_length) * 100\n",
+    "def perform_dijkstra_analysis():\n",
+    "    city_folder = \"City_data\"\n",
+    "    files = []\n",
+    "    output_folder = \"Street diversity\"\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "    efficiency_by_type = ways_with_efficiency.groupby('tagvalue')['efficiency'].mean()\n",
-    "    top_highways = efficiency_by_type.sort_values(ascending=False)\n",
-    "    \n",
-    "    top_highways = top_highways.reset_index()\n",
-    "    top_highways['average_travel_time'] = avg_travel_time\n",
+    "    for subfolder in ['village', 'town', 'city']:\n",
+    "        full_path = os.path.join(city_folder, subfolder)\n",
+    "        files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
-    "    return top_highways\n",
+    "    for analysis_number in range(1, 11):\n",
+    "        results = []\n",
+    "        for file in files:\n",
+    "            city_name = os.path.splitext(os.path.basename(file))[0]\n",
+    "            df = load_from_all_xml(file)  \n",
+    "            G = create_graph(df, city_name)  \n",
     "\n",
-    "def save_street_efficiency(ways_with_efficiency, city_output_folder, city_name):\n",
-    "    street_efficiency_df = ways_with_efficiency[ways_with_efficiency['length'] >= 20]\n",
-    "    \n",
-    "    street_efficiency_df = street_efficiency_df[['id', 'tagvalue', 'length_km', 'maxspeed', 'travel_time', 'efficiency']] \n",
-    "    street_efficiency_df = street_efficiency_df.sort_values(by='efficiency', ascending=False)\n",
+    "            df_nodes = df[df['type'] == 'node']\n",
+    "            node_pairs = select_random_node_pairs(df_nodes)\n",
     "\n",
-    "    street_efficiency_df.to_csv(os.path.join(city_output_folder, f\"Street_efficiency_detailed.csv\"), index=False)\n",
+    "            all_types = []\n",
+    "            for start_node, end_node in node_pairs:\n",
+    "                types_traversed = run_dijkstra_and_track_types(G, start_node, end_node)\n",
+    "                while types_traversed is None:\n",
+    "                    start_node, end_node = random.choice(node_pairs)\n",
+    "                    types_traversed = run_dijkstra_and_track_types(G, start_node, end_node)\n",
+    "                all_types.extend(types_traversed)\n",
     "\n",
-    "city_folder = \"City_data\"\n",
-    "result = []\n",
-    "output_folder = \"Street diversity\"\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
+    "            type_counts = pd.Series(all_types).value_counts()\n",
+    "            for highway_type, count in type_counts.items():\n",
+    "                results.append({'city': city_name, 'highway_type': highway_type, 'count': count})\n",
     "\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
-    "    full_path = os.path.join(city_folder, subfolder)\n",
-    "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
-    "    for file_path in files:\n",
-    "        city_name = os.path.basename(file_path).split('.')[0]\n",
+    "        results_df = pd.DataFrame(results)\n",
     "\n",
-    "        city_output_folder = os.path.join(output_folder, city_name)\n",
-    "        os.makedirs(city_output_folder, exist_ok=True)\n",
+    "        plot_traffic_efficiency(results_df, output_folder, analysis_number)\n",
     "\n",
-    "        df = load_from_all_xml(file_path)\n",
-    "        ways_df = df[df['type'] == 'way']\n",
-    "\n",
-    "        ways_speed_updated = assign_default_speed(ways_df)\n",
-    "        ways_speed_updated = update_speeds(ways_speed_updated, ways_maxspeed)\n",
-    "        \n",
-    "        filtered_ways = filter_top_highways(ways_speed_updated, percentage_lengths_df, city_name)\n",
-    "        ways_with_efficiency = calculate_efficiency(filtered_ways)\n",
-    "        top_highways = get_median_efficiency(ways_with_efficiency)\n",
-    "\n",
-    "        top_highways.to_csv(os.path.join(city_output_folder, \"Street_efficiency.csv\"), index=False)\n",
-    "        save_street_efficiency(ways_with_efficiency, city_output_folder, city_name)"
+    "perform_dijkstra_analysis()"
    ]
   },
   {
