mannheim dataset + aspect changes for network

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
     "            if result.get(\"osm_type\") in [\"node\", \"relation\"]:\n",
     "                if result.get(\"addresstype\") in [\"village\", \"town\", \"city\"] and 'boundingbox' in result:\n",
     "                    display_name = result.get(\"display_name\", \"\")\n",
-    "                    if 'Bayern' in display_name:\n",
+    "                    if 'Baden-Württemberg' in display_name:\n",
     "                        bbox = result['boundingbox']\n",
     "                        addresstype = result.get(\"addresstype\", \"\")\n",
     "                        return [float(coord) for coord in bbox], addresstype  \n",
@@ -873,8 +873,8 @@
     "            \n",
     "                save_to_xml(df_filtered, city, addresstype)\n",
     "            \n",
-    "            print(\"Processing merging...\")\n",
-    "            df_filtered = process_merging(df_filtered)\n",
+    "            #print(\"Processing merging...\")\n",
+    "            #df_filtered = process_merging(df_filtered)\n",
     "\n",
     "            print(\"Processing Isolation filter...\")\n",
     "            df_filtered = remove_isolated_nodes(df_filtered)\n",
@@ -1086,18 +1086,21 @@
     "    colors = plt.cm.get_cmap('tab20', len(highway_types))\n",
     "    highway_color_map = {highway_type: colors(i) for i, highway_type in enumerate(highway_types)}\n",
     "\n",
-    "    plt.figure(figsize=(12, 8))\n",
+    "    fig, ax = plt.subplots(figsize=(20, 16))\n",
     "\n",
     "    for highway_type, color in highway_color_map.items():\n",
     "        edges_by_type = [(u, v) for u, v, d in G.edges(data=True) if d.get('highway_type') == highway_type]\n",
-    "        nx.draw_networkx_edges(G, pos, edgelist=edges_by_type, edge_color=[color]*len(edges_by_type), width=1.5)\n",
+    "        nx.draw_networkx_edges(G, pos, edgelist=edges_by_type, edge_color=[color]*len(edges_by_type), width=1.5, ax=ax)\n",
     "\n",
     "    node_degrees = dict(G.degree())\n",
     "    node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
-    "    nx.draw_networkx_nodes(G, pos, node_size=1, node_color=node_color)\n",
+    "    nx.draw_networkx_nodes(G, pos, node_size=1, node_color=node_color, ax=ax)\n",
+    "\n",
     "    legend_elements = [Line2D([0], [0], color=highway_color_map[highway_type], lw=2, label=highway_type)\n",
     "                       for highway_type in highway_color_map]\n",
-    "    plt.legend(handles=legend_elements, loc='upper right')\n",
+    "    ax.legend(handles=legend_elements, loc='upper right')\n",
+    "\n",
+    "    ax.set_aspect(1.0 / np.cos(50 * np.pi / 180))\n",
     "\n",
     "    # Netzwerk speichern\n",
     "    output_file = os.path.join(output_folder, f\"{city_name}.png\")\n",
@@ -1362,12 +1365,15 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "    for index, way in df[df['type'] == 'way'].iterrows():\n",
+    "        highway_type = way['tagvalue']\n",
+    "        if highway_type == 'track':\n",
+    "            continue\n",
+    "        \n",
     "        node_ids_list = way['node_ids']\n",
     "        if node_ids_list is not None:\n",
     "            filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
     "            if len(filtered_node_ids_list) > 1:\n",
     "                for i in range(len(filtered_node_ids_list) - 1):\n",
-    "                    highway_type = way['tagvalue']\n",
     "                    G.add_edge(filtered_node_ids_list[i], filtered_node_ids_list[i + 1], highway_type=highway_type)\n",
     "    \n",
     "    return G\n",
