changed dpi to 200

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1043,14 +1043,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\2657265495.py:37: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\420716798.py:37: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  colors = plt.cm.get_cmap('tab20', len(highway_types))\n"
      ]
     }
@@ -1112,15 +1112,14 @@
     "    ax.set_aspect(1.0 / np.cos(50 * np.pi / 180))\n",
     "\n",
     "    # For removing extra space\n",
-    "    x_values, y_values = zip(*pos.values())\n",
-    "    ax.set_xlim(min(x_values), max(x_values))\n",
-    "    ax.set_ylim(min(y_values), max(y_values))\n",
-    "\n",
-    "    ax.set_axis_off()\n",
+    "    #x_values, y_values = zip(*pos.values())\n",
+    "    #ax.set_xlim(min(x_values), max(x_values))\n",
+    "    #ax.set_ylim(min(y_values), max(y_values))\n",
+    "    #ax.set_axis_off()\n",
     "\n",
     "    # Netzwerk speichern\n",
     "    output_file = os.path.join(output_folder, f\"{city_name}.png\")\n",
-    "    plt.savefig(output_file, bbox_inches='tight', pad_inches=0, dpi=300)\n",
+    "    plt.savefig(output_file, bbox_inches='tight', pad_inches=0, dpi=200)\n",
     "    plt.close()"
    ]
   },
