streets changed for street length of categories

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,14 +1588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def federal_highways_per_city():\n",
     "    city_folder = \"City_data\"\n",
-    "    highway_types = ['primary', 'secondary', 'tertiary']\n",
-    "    colors = {'primary': 'skyblue', 'secondary': 'orange', 'tertiary': 'green'}\n",
+    "    highway_types = ['primary', 'secondary', 'tertiary', 'trunk']\n",
+    "    colors = {'primary': 'skyblue', 'secondary': 'orange', 'tertiary': 'green', 'trunk': 'red'}\n",
     "    files = []\n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
@@ -1645,14 +1645,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def city_streets_per_city():\n",
     "    city_folder = \"City_data\"\n",
-    "    highway_types = ['residential', 'living_street']\n",
-    "    colors = {'residential': 'skyblue', 'living_street': 'orange'}\n",
+    "    highway_types = ['residential', 'living_street', 'service']\n",
+    "    colors = {'residential': 'skyblue', 'living_street': 'orange', 'service': 'green'}\n",
     "    files = []\n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
@@ -1702,14 +1702,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def footpaths_per_city():\n",
     "    city_folder = \"City_data\"\n",
-    "    highway_types = ['service', 'pedestrian', 'track', 'footway', 'sidewalk', 'steps']\n",
-    "    colors = {'service': 'skyblue', 'pedestrian': 'orange', 'track': 'green', 'footway': 'yellow', 'sidewalk': 'red', 'steps': 'purple'}\n",
+    "    highway_types = ['path', 'pedestrian', 'track', 'footway', 'sidewalk']\n",
+    "    colors = {'path': 'skyblue', 'pedestrian': 'orange', 'track': 'green', 'footway': 'yellow', 'sidewalk': 'red'}\n",
     "    files = []\n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
@@ -1752,9 +1752,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['city'] = city_name\n"
+     ]
+    }
+   ],
    "source": [
     "street_length_comparison()\n",
     "street_length_per_city()\n",
