code change to earlier commit

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1043,18 +1043,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\420716798.py:37: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
-      "  colors = plt.cm.get_cmap('tab20', len(highway_types))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
@@ -1546,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,14 +1693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "def footpaths_per_city():\n",
     "    city_folder = \"City_data\"\n",
-    "    highway_types = ['path', 'pedestrian', 'track', 'footway', 'sidewalk']\n",
-    "    colors = {'path': 'skyblue', 'pedestrian': 'orange', 'track': 'green', 'footway': 'yellow', 'sidewalk': 'red'}\n",
+    "    highway_types = ['path', 'track', 'footway']\n",
+    "    colors = {'path': 'skyblue', 'track': 'green', 'footway': 'yellow'}\n",
     "    files = []\n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
@@ -1752,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
