--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,14 +1636,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def city_streets_per_city():\n",
     "    city_folder = \"City_data\"\n",
-    "    highway_types = ['residential', 'living_street', 'service']\n",
-    "    colors = {'residential': 'skyblue', 'living_street': 'orange', 'service': 'green'}\n",
+    "    highway_types = ['residential', 'service']\n",
+    "    colors = {'residential': 'skyblue', 'service': 'green'}\n",
     "    files = []\n",
     "    for subfolder in ['village', 'town', 'city']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,58 +1743,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n",
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n",
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n",
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n",
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n",
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n",
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_30664\\3325789278.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['city'] = city_name\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "street_length_comparison()\n",
     "street_length_per_city()\n",
