--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -880,8 +880,8 @@
     "            \n",
     "                save_to_xml(df_filtered, city, addresstype)\n",
     "            \n",
-    "            #print(\"Processing merging...\")\n",
-    "            #df_filtered = process_merging(df_filtered)\n",
+    "            print(\"Processing merging...\")\n",
+    "            df_filtered = process_merging(df_filtered)\n",
     "\n",
     "            print(\"Processing Isolation filter...\")\n",
     "            df_filtered = remove_isolated_nodes(df_filtered)\n",
